[package]
name = "hashtree-rs"
version = "0.1.0"
authors = ["Potuz <potuz@prysmaticlabs.com>"]
edition = "2021"
description = "Rust bindings for the hashtree library"
license = "MIT"
build = "build.rs" 
keywords = ["hash", "crypto", "sha256", "merkle"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
